// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data Selection Reducer should set  state when dispatching cancelDrawing 1`] = `Object {}`;

exports[`Data Selection Reducer should set  state when dispatching downloadDataSelection 1`] = `Object {}`;

exports[`Data Selection Reducer should set  state when dispatching endDataSelection 1`] = `Object {}`;

exports[`Data Selection Reducer should set  state when dispatching startDrawing 1`] = `Object {}`;

exports[`Data Selection Reducer should set dataset state when dispatching setDataset 1`] = `
Object {
  "dataset": "foobar",
}
`;

exports[`Data Selection Reducer should set geometryFilter state when dispatching removeGeometryFilter 1`] = `
Object {
  "geometryFilter": Object {},
}
`;

exports[`Data Selection Reducer should set geometryFilter state when dispatching setGeometryFilter 1`] = `
Object {
  "geometryFilter": Object {
    "description": "undefined en undefined",
    "markers": undefined,
  },
}
`;

exports[`Data Selection Reducer should set isLoading, authError, errorMessage, result, markers state when dispatching receiveDataSelectionFailure 1`] = `
Object {
  "authError": false,
  "errorMessage": Object {
    "error": "error message",
  },
  "isLoading": false,
  "markers": Array [],
  "result": Object {},
}
`;

exports[`Data Selection Reducer should set isLoading, markers, errorMessage, authError, data state when dispatching receiveDataSelectionSuccess 1`] = `
Object {
  "authError": false,
  "data": Object {
    "some": "data",
  },
  "errorMessage": "",
  "isLoading": false,
  "markers": Array [],
}
`;

exports[`Data Selection Reducer should set isLoading, page, dataset state when dispatching fetchDataSelection 1`] = `
Object {
  "dataset": undefined,
  "isLoading": true,
  "page": undefined,
}
`;

exports[`Data Selection Reducer should set loadingMarkers state when dispatching fetchMarkersRequest 1`] = `
Object {
  "loadingMarkers": true,
}
`;

exports[`Data Selection Reducer should set loadingMarkers, errorMessage, result, markers state when dispatching fetchMarkersFailure 1`] = `
Object {
  "errorMessage": "error",
  "loadingMarkers": false,
  "markers": Array [],
  "result": Object {},
}
`;

exports[`Data Selection Reducer should set loadingMarkers, markers state when dispatching fetchMarkersSuccess 1`] = `
Object {
  "loadingMarkers": false,
  "markers": "foobar",
}
`;

exports[`Data Selection Reducer should set page state when dispatching setPage 1`] = `
Object {
  "page": 1,
}
`;

exports[`Data Selection Reducer should set shape state when dispatching resetDrawing 1`] = `
Object {
  "shape": "",
}
`;

exports[`Data Selection Reducer when a route type is dispatched should set dataset and an object from getStateFromQuery if meta.query is set 1`] = `
Object {
  "dataset": "bag",
}
`;

exports[`Data Selection Reducer when a route type is dispatched should set the dataset and view if meta.query is not set 1`] = `
Object {
  "dataset": "hr",
}
`;
